        -new filter hooks to header (manduca_background images, mandsuca_after_masthead )
        -add new divs (outer-wrapper, outer-masthead) to header (and outer-wrapper to footer) for easing formating child theme.
        
16.12
    commit #16.12.1
        9 dec, 2016
        - page navigation: svg is included in anchor to be clickable. Design also effected.
        -New hook: manduica_copyright_text in footer.php
        -header search  form: "search" text receives other css class in order to child theme is able to display it. 

    commit #16.12.2
        12 Dec, 2016
        ==bug== menu toggle did not work (since #16.11.1). SVG is now coming from css (base64), not from the html.
        -menu word becomes screen reader text
        -filter of manduca_search_placeholder of input text in search fiels.
        
    commit #16.12.3
        15 Dec, 2016
        ==bug== breadcrumb has wrong code when subpage is displayed.
        - also optimize the breadcrumb function
    
    commit #16.12.4
        22 December, 2016
        - add rem basis to each px unit. Check all.         
        - css:search submit and menu-toggle hover and focus colouring
        - testing with different browsoers and fix proglems.
        -action hook: manduca_after_content (before outer-wrapper)
        -new screenshot (screenshot mobile deleted)
        
    commit #16.12.5
        2 January, 2017
        -prepared for repository
        -bradcrumb: single category displayed in breadcrumb
        -page navigation hover design fixed (sometimes it was invisible)
        -site background color deleted (it was a gray, sometimes it was visible, not always)
        
#17.1
    commit #17.1.1
        =bug=-focus snake did not work: style css svg fixed
        =universal planning= verdana and other font famaily deleted, browser default allowed.
    
    commit #17.1.2
        ==footer design changes==
            - on line per menu item on mobil
            - button-like in footer
        