@@ -24,10 +24,20 @@ get_header(); ?>
 				</h1>
 			</header>
 
-			<?php manduca_page_navigation(); ?>
-
-			<?php /* Start the Loop */ ?>
-			<?php manduca_display_excerpt() ?>
+			
+			<?php
+				global $wp_query;
+			
+				if ( $wp_query->max_num_pages > 1 ) : ?>
+					<nav id="<?php echo esc_attr( $html_id ); ?>" class="navigation" role="navigation">
+						<h3 class="assistive-text"><?php _e( 'Post navigation', 'manduca' ); ?></h3>
+						<div class="nav-previous"><?php next_posts_link( __( '<span class="meta-nav">&larr;</span> Older posts', 'manduca' ) ); ?></div>
+						<div class="nav-next"><?php previous_posts_link( __( 'Newer posts <span class="meta-nav">&rarr;</span>', 'manduca' ) ); ?></div>
+					</nav><!-- .navigation -->
+				
+				<?php endif;
+			
+				manduca_display_excerpt() ?>
 
 		<?php else : ?>
 
